--- a/chesnok/markup/static/scss/partials/_header.scss
+++ b/chesnok/markup/static/scss/partials/_header.scss
@@ -108,7 +108,7 @@
 //-------------------------
 
 .headerMain {
-  padding: 1rem 0 3rem;
+  padding: 1rem 0 0;
 }
 
 .headerTopWrap {
@@ -698,11 +698,11 @@
   }
 
   .wrapSearchResultImage {
-    width: 33%;
+    width: 18%;
   }
 
   .searchResultImageInfo {
-    width: 65%;
+    width: 80%;
   }
 
   .headerBottomWrap {
