--- a/chesnok/markup/static/scss/common.scss
+++ b/chesnok/markup/static/scss/common.scss
@@ -5,4 +5,11 @@
 @import "partials/main";
 @import "partials/mobileMenu";
 @import "partials/header";
+@import "partials/novelty";
+@import "partials/hotOffer";
+@import "partials/articles";
+@import "partials/news";
+@import "partials/textAbout";
+@import "partials/scrollTopBottom";
+@import "partials/modal";
 @import "partials/footer";
