--- a/chesnok/markup/static/scss/vars.scss
+++ b/chesnok/markup/static/scss/vars.scss
@@ -19,6 +19,7 @@ $nero: #272727;
 $jon: #434041;
 $arsenic: #3f4750;
 $mortar: #585757;
+$modalBg: rgba(127, 127, 127, 0.75);
 $scorpion: #686868;
 $raven: #6f757c;
 $gray: #7f7f7f;
@@ -28,6 +29,7 @@ $darkGray: #b2b2b2;
 $darkGrayLight: #ababab;
 $whiteSmoke: #ebebeb;
 $whiteSmokeLight: #f0f0f0;
+
 
 // Green
 
@@ -67,5 +69,6 @@ $linkHover: $safetyOrange;
 $robotoRegular: 'Roboto-Regular', Helvetica, sans-serif;
 $robotoLight: 'Roboto-Light', Helvetica, sans-serif;
 $robotoBold: 'Roboto-Bold', Helvetica, sans-serif;
+$icons: 'icons';
 
 $borderRadius: .3rem;
