Finished home page. Added three other pages.

--- a/chesnok/markup/static/scss/common.scss
+++ b/chesnok/markup/static/scss/common.scss
@@ -12,4 +12,11 @@
 @import "partials/textAbout";
 @import "partials/scrollTopBottom";
 @import "partials/modal";
+@import "partials/royalSlider";
+@import "partials/preview";
+@import "partials/breadCrumbs";
+@import "partials/productCard";
+@import "partials/productCardTab";
+@import "partials/paymentAndDelivery";
+@import "partials/ordering";
 @import "partials/footer";
