--- a/chesnok/markup/static/scss/partials/_novelty.scss
+++ b/chesnok/markup/static/scss/partials/_novelty.scss
@@ -29,6 +29,10 @@
       position: absolute;
       right: 0;
       top: 0;
+
+      @media (max-width: $mdScreen) {
+        display: none !important;
+      }
     }
   }
 }
