--- a/chesnok/markup/static/scss/vars.scss
+++ b/chesnok/markup/static/scss/vars.scss
@@ -15,6 +15,7 @@ $xlgScreen: 1368px;
 //-------------------------
 
 // Gray
+$black: #000000;
 $nero: #272727;
 $jon: #434041;
 $arsenic: #3f4750;
@@ -29,6 +30,7 @@ $darkGray: #b2b2b2;
 $darkGrayLight: #ababab;
 $whiteSmoke: #ebebeb;
 $whiteSmokeLight: #f0f0f0;
+$inputBg: #f8f6f7;
 
 
 // Green
