--- a/chesnok/markup/static/scss/GUI.scss
+++ b/chesnok/markup/static/scss/GUI.scss
@@ -19,7 +19,49 @@
 }
 
 .btnBlue {
+  background: $pelorous;
 
+  &:hover {
+    background: darken($pelorous, 5%);
+    color: $white;
+  }
+}
+
+.btnOrange {
+  background: $safetyOrange;
+  font-size: 1.8rem;
+  text-transform: none;
+
+  &:hover {
+    background: darken($safetyOrange, 5%);
+    color: $white;
+  }
+}
+
+.btnSend {
+  display: block;
+  font-size: 2.4rem;
+  margin: 0 auto;
+  width: 29rem;
+
+  @media (max-width: $smScreen) {
+    width: 100%;
+  }
+}
+
+.btnBuy {
+  font-size: 2.4rem;
+}
+
+.btnBackBuy {
+  font-size: 1.8rem;
+  text-align: center;
+  text-transform: inherit;
+  width: 100%;
+}
+
+.btnSignUp {
+  @extend .btnSend;
 }
 
 .link {
@@ -51,7 +93,7 @@
   margin-bottom: 2rem;
 }
 
-.marker{
+.marker {
   border-radius: 50%;
   color: $white;
   display: table;
@@ -76,15 +118,80 @@
   background: $bahia;
 }
 
-.markerHit{
+.markerHit {
   background: $pelorous;
 }
 
-.markerSale{
+.markerSale {
   background: $violetRed;
 }
 
-.markerText{
+.markerText {
   display: table-cell;
   vertical-align: middle;
+}
+
+.inputGlobal {
+  background: $inputBg;
+  border: .1rem solid $mischka;
+  border-radius: .2rem;
+  color: $textColor;
+  font-family: $robotoLight;
+  font-size: 1.8rem;
+  height: 5rem;
+  margin-bottom: 1rem;
+  padding: 1.5rem;
+  width: 100%;
+}
+
+.textareaGlobal {
+  @extend .inputGlobal;
+  height: 15rem;
+  resize: vertical;
+}
+
+::-webkit-input-placeholder {
+  color: $scorpion;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+  color: $scorpion;
+}
+
+::-moz-placeholder { /* Firefox 19+ */
+  color: $scorpion;
+}
+
+:-ms-input-placeholder {
+  color: $scorpion;
+}
+
+.pseudoTable {
+  color: $textColorLight;
+  display: table;
+  width: 100%;
+}
+
+.pseudoTr {
+  display: table-row;
+
+  &:last-child {
+    .pseudoTd {
+      border-bottom: none;
+    }
+  }
+}
+
+.pseudoTd {
+  border-bottom: .1rem solid $whiteSmoke;
+  display: table-cell;
+  font-size: 1.4rem;
+  padding: .25rem 0;
+  vertical-align: top;
+  width: 50%;
+
+  &:first-child {
+    font-family: $robotoLight;
+    padding: .25rem 2rem .25rem .5rem;
+  }
 }
