Added new pages

--- a/chesnok/markup/static/scss/common.scss
+++ b/chesnok/markup/static/scss/common.scss
@@ -19,4 +19,11 @@
 @import "partials/productCardTab";
 @import "partials/paymentAndDelivery";
 @import "partials/ordering";
+@import "partials/profile";
+@import "partials/orderCompleted";
+@import "partials/registration";
+@import "partials/category";
+@import "partials/article";
+@import "partials/entranceModal";
+@import "partials/404";
 @import "partials/footer";
