--- a/chesnok/markup/static/scss/GUI.scss
+++ b/chesnok/markup/static/scss/GUI.scss
@@ -5,8 +5,13 @@
   border-radius: $borderRadius;
   color: $white;
   display: inline-block;
+  font-size: 2.4rem;
   padding: 1rem 1.5rem;
   text-transform: uppercase;
+
+  @media (max-width: $mdScreen) {
+    font-size: 1.6rem;
+  }
 }
 
 .btnGreen {
@@ -40,7 +45,6 @@
 
 .btnSend {
   display: block;
-  font-size: 2.4rem;
   margin: 0 auto;
   width: 29rem;
 
@@ -49,8 +53,15 @@
   }
 }
 
-.btnBuy {
-  font-size: 2.4rem;
+.btnSave{
+  float: right;
+  margin-top: 3rem;
+
+  @media (max-width: $smScreen) {
+    font-size: 2rem;
+    float: none;
+    width: 100%;
+  }
 }
 
 .btnBackBuy {
