--- a/chesnok/markup/static/scss/fonts.scss
+++ b/chesnok/markup/static/scss/fonts.scss
@@ -151,264 +151,8 @@
 .icon-minusCircle:before {
     content: "\e91c";
 }
-.icon-plateType_1 .path1:before {
-    content: "\e91d";
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_1 .path2:before {
-    content: "\e91e";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_1 .path3:before {
-    content: "\e91f";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_1 .path4:before {
-    content: "\e920";
-    margin-left: -1em;
-    color: rgb(109, 99, 90);
-}
-.icon-plateType_1 .path5:before {
-    content: "\e921";
-    margin-left: -1em;
-    color: rgb(109, 99, 90);
-}
-.icon-plateType_1 .path6:before {
-    content: "\e922";
-    margin-left: -1em;
-    color: rgb(109, 99, 90);
-}
-.icon-plateType_1 .path7:before {
-    content: "\e923";
-    margin-left: -1em;
-    color: rgb(179, 174, 170);
-}
-.icon-plateType_1 .path8:before {
-    content: "\e924";
-    margin-left: -1em;
-    color: rgb(179, 174, 170);
-}
 .icon-close:before {
     content: "\e925";
-}
-.icon-plateType_2 .path1:before {
-    content: "\e926";
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_2 .path2:before {
-    content: "\e927";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_2 .path3:before {
-    content: "\e928";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_2 .path4:before {
-    content: "\e929";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_2 .path5:before {
-    content: "\e92a";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_2 .path6:before {
-    content: "\e92b";
-    margin-left: -1em;
-    color: rgb(140, 133, 126);
-}
-.icon-plateType_3 .path1:before {
-    content: "\e92c";
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_3 .path2:before {
-    content: "\e92d";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_3 .path3:before {
-    content: "\e92e";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_3 .path4:before {
-    content: "\e92f";
-    margin-left: -1em;
-    color: rgb(109, 99, 90);
-}
-.icon-plateType_3 .path5:before {
-    content: "\e930";
-    margin-left: -1em;
-    color: rgb(109, 99, 90);
-}
-.icon-plateType_4 .path1:before {
-    content: "\e931";
-    color: rgb(255, 255, 255);
-}
-.icon-plateType_4 .path2:before {
-    content: "\e932";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path3:before {
-    content: "\e933";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path4:before {
-    content: "\e934";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path5:before {
-    content: "\e935";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path6:before {
-    content: "\e936";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path7:before {
-    content: "\e937";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path8:before {
-    content: "\e938";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path9:before {
-    content: "\e939";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path10:before {
-    content: "\e93a";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path11:before {
-    content: "\e93b";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path12:before {
-    content: "\e93c";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path13:before {
-    content: "\e93d";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path14:before {
-    content: "\e93e";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path15:before {
-    content: "\e93f";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path16:before {
-    content: "\e940";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path17:before {
-    content: "\e941";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path18:before {
-    content: "\e942";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path19:before {
-    content: "\e943";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path20:before {
-    content: "\e944";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path21:before {
-    content: "\e945";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path22:before {
-    content: "\e946";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path23:before {
-    content: "\e947";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path24:before {
-    content: "\e948";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path25:before {
-    content: "\e949";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path26:before {
-    content: "\e94a";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path27:before {
-    content: "\e94b";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path28:before {
-    content: "\e94c";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path29:before {
-    content: "\e94d";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path30:before {
-    content: "\e94e";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path31:before {
-    content: "\e94f";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path32:before {
-    content: "\e950";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
-}
-.icon-plateType_4 .path33:before {
-    content: "\e951";
-    margin-left: -1em;
-    color: rgb(146, 140, 134);
 }
 .icon-comment:before {
     content: "\e952";
@@ -446,6 +190,10 @@
 .icon-arrowFull:before {
     content: "\e60c";
 }
+.icon-calendar:before {
+    content: "\e616";
+}
 .icon-youtube:before {
     content: "\e953";
 }
+
