--- a/chesnok/markup/static/scss/common.scss
+++ b/chesnok/markup/static/scss/common.scss
@@ -25,5 +25,6 @@
 @import "partials/category";
 @import "partials/article";
 @import "partials/entranceModal";
+@import "partials/cart";
 @import "partials/404";
 @import "partials/footer";
