--- a/chesnok/markup/static/scss/common.scss
+++ b/chesnok/markup/static/scss/common.scss
@@ -26,5 +26,6 @@
 @import "partials/article";
 @import "partials/entranceModal";
 @import "partials/cart";
+@import "partials/catalog";
 @import "partials/404";
 @import "partials/footer";
