--- a/perehid/dev/html/partials/content-main.html
+++ b/perehid/dev/html/partials/content-main.html
@@ -33,7 +33,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product product-new">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -51,7 +51,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product product-sale">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -70,7 +70,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -88,7 +88,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -106,7 +106,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -124,7 +124,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -142,7 +142,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product product-new">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -160,7 +160,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -178,7 +178,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -196,7 +196,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -214,7 +214,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product product-sale">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
@@ -233,7 +233,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="product">
                     <div class="wrap-product-img">
-                        <img class="product-img" src="../img/product-img.jpg" alt="">
+                        <img class="product-img" src="../images/product-img.jpg" alt="">
                     </div>
                     <div class="wrap-product-review">
                         <a href="#" class="product-title-link">ASKHOLMEN підставка для
