Created product page.

--- a/perehid/dev/scss/core/_core.scss
+++ b/perehid/dev/scss/core/_core.scss
@@ -3,9 +3,11 @@
 //-------------------------
 
 @import "../libs/normalize/normalize";
-@import "fonts";
 @import "../libs/fontawesome/fontawesome";
 @import "../libs/select/select2";
 @import "../libs/datepicker/datepicker";
+@import "../libs/slick/slick";
+@import "../libs/fullcalendar/fullcalendar";
+@import "fonts";
 @import "variables";
 @import "mixin";
