--- a/perehid/dev/scss/core/_variables.scss
+++ b/perehid/dev/scss/core/_variables.scss
@@ -23,7 +23,7 @@ $shuttleGrey: #5c6874;
 $stormGrey: #767c83;
 $gray: #828282;
 $aluminium: #848a94;
-$Nobel: #999999;
+$nobel: #999999;
 $heather: #b7bec9;
 $ghost: #c5c5c5;
 $linkWater: #cfd6de;
