--- a/perehid/dev/scss/main.scss
+++ b/perehid/dev/scss/main.scss
@@ -5,4 +5,6 @@
 @import "partials/sidebar-main";
 @import "partials/content-main";
 @import "partials/pagination";
+@import "partials/bread-crumds";
+@import "partials/content-product";
 @import "partials/footer";
