--- a/perehid/dev/html/partials/content-product.html
+++ b/perehid/dev/html/partials/content-product.html
@@ -241,7 +241,7 @@
         </div>
         <div class="calendar-popover-content clearfix">
             <div class="calendar-popover-img">
-                <img class="popover-img" src="../../images/product-slider/slider-small-3.jpg" alt="">
+                <img class="popover-img" src="../images/product-slider/slider-small-3.jpg" alt="">
             </div>
             <div class="calendar-popover-table product-about-table">
                 <div class="product-about-tr">
