Added register page.

--- a/perehid/dev/html/partials/scripts.html
+++ b/perehid/dev/html/partials/scripts.html
@@ -5,6 +5,8 @@
 <script src="../js/lib/slick/slick.min.js"></script>
 <script src="../js/lib/moment/moment.min.js"></script>
 <script src="../js/lib/fullcalendar/fullcalendar.min.js"></script>
+<script src="../js/lib/jquery-validation/jquery.validate.min.js"></script>
+<script src="../js/main/jquery-validation.js"></script>
 <script src="../js/main.js"></script>
 
 <script>
