--- a/perehid/dev/scss/core/_variables.scss
+++ b/perehid/dev/scss/core/_variables.scss
@@ -30,6 +30,7 @@ $linkWater: #cfd6de;
 $solitude: #dee7ed;
 $solitudeLight: #f9fbfc;
 $solitudeSecond: #f6f8fa;
+$whiteSmoke: #ebebeb;
 $white: #fff;
 
 $burntSienna: #ef5560;
