--- a/perehid/dev/scss/main.scss
+++ b/perehid/dev/scss/main.scss
@@ -7,4 +7,5 @@
 @import "partials/pagination";
 @import "partials/bread-crumds";
 @import "partials/content-product";
+@import "partials/content-register";
 @import "partials/footer";
