--- a/perehid/dev/html/partials/content-product.html
+++ b/perehid/dev/html/partials/content-product.html
@@ -6,28 +6,28 @@
             <div id="carousel" class="carousel carousel-big slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="../images/product-slider/slider-big.jpg">
+                        <img src="../../images/product-slider/slider-big.jpg">
                     </div>
                     <div class="item">
-                        <img src="../images/product-slider/slider-big.jpg">
+                        <img src="../../images/product-slider/slider-big.jpg">
                     </div>
                     <div class="item">
-                        <img src="../images/product-slider/slider-big.jpg">
+                        <img src="../../images/product-slider/slider-big.jpg">
                     </div>
                     <div class="item">
-                        <img src="../images/product-slider/slider-big.jpg">
+                        <img src="../../images/product-slider/slider-big.jpg">
                     </div>
                     <div class="item">
-                        <img src="../images/product-slider/slider-big.jpg">
+                        <img src="../../images/product-slider/slider-big.jpg">
                     </div>
                     <div class="item">
-                        <img src="../images/product-slider/slider-big.jpg">
+                        <img src="../../images/product-slider/slider-big.jpg">
                     </div>
                     <div class="item">
-                        <img src="../images/product-slider/slider-big.jpg">
+                        <img src="../../images/product-slider/slider-big.jpg">
                     </div>
                     <div class="item">
-                        <img src="../images/product-slider/slider-big.jpg">
+                        <img src="../../images/product-slider/slider-big.jpg">
                     </div>
                 </div>
             </div>
@@ -36,23 +36,23 @@
                     <div class="carousel-inner product-slider-thumb">
                         <div class="item active">
                             <div data-target="#carousel" data-slide-to="0" class="thumb"><img
-                                    src="../images/product-slider/slider-small-1.jpg"></div>
+                                    src="../../images/product-slider/slider-small-1.jpg"></div>
                             <div data-target="#carousel" data-slide-to="1" class="thumb"><img
-                                    src="../images/product-slider/slider-small-2.jpg"></div>
+                                    src="../../images/product-slider/slider-small-2.jpg"></div>
                             <div data-target="#carousel" data-slide-to="2" class="thumb"><img
-                                    src="../images/product-slider/slider-small-3.jpg"></div>
+                                    src="../../images/product-slider/slider-small-3.jpg"></div>
                             <div data-target="#carousel" data-slide-to="3" class="thumb"><img
-                                    src="../images/product-slider/slider-small-4.jpg"></div>
+                                    src="../../images/product-slider/slider-small-4.jpg"></div>
                         </div>
                         <div class="item">
                             <div data-target="#carousel" data-slide-to="0" class="thumb"><img
-                                    src="../images/product-slider/slider-small-1.jpg"></div>
+                                    src="../../images/product-slider/slider-small-1.jpg"></div>
                             <div data-target="#carousel" data-slide-to="1" class="thumb"><img
-                                    src="../images/product-slider/slider-small-2.jpg"></div>
+                                    src="../../images/product-slider/slider-small-2.jpg"></div>
                             <div data-target="#carousel" data-slide-to="2" class="thumb"><img
-                                    src="../images/product-slider/slider-small-3.jpg"></div>
+                                    src="../../images/product-slider/slider-small-3.jpg"></div>
                             <div data-target="#carousel" data-slide-to="3" class="thumb"><img
-                                    src="../images/product-slider/slider-small-4.jpg"></div>
+                                    src="../../images/product-slider/slider-small-4.jpg"></div>
                         </div>
                     </div>
                     <a class="left carousel-control" href="#thumbcarousel" role="button" data-slide="prev">
@@ -214,7 +214,7 @@
 <!-- END content-product-bottom -->
 
 <!-- START content-product-modal -->
-<div class="modal fade full-calendar-modal" id="full-calendar-modal" tabindex="-1" role="dialog"
+<div class="modal fade full-calendar-modal modal-global" id="full-calendar-modal" role="dialog"
      aria-labelledby="myModalLabel">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
