Added profile page.

--- a/perehid/dev/scss/core/_form.scss
+++ b/perehid/dev/scss/core/_form.scss
@@ -37,7 +37,7 @@
     }
     border: .1rem solid $solitude;
     box-shadow: none;
-    padding: 2rem 1rem;
+    height: 4.5rem;
 
     &.error {
       border: .1rem solid $burntSienna;
