--- a/perehid/dev/scss/core/_variables.scss
+++ b/perehid/dev/scss/core/_variables.scss
@@ -16,6 +16,8 @@ $xlgScreen: 1368px;
 $viking: #56c2cf;
 
 $black: #000;
+$blackOpacity: rgba(0,0,0,0.3);;
+$grayDark: #333;
 $codGrey: #2e3336;
 $vulcan: #373b3f;
 $trout: #4b5157;
@@ -32,6 +34,7 @@ $solitudeLight: #f9fbfc;
 $solitudeSecond: #f6f8fa;
 $whiteSmoke: #ebebeb;
 $white: #fff;
+$whiteOpacity: rgba(255,255,255,0.9);
 
 $burntSienna: #ef5560;
 
