--- a/perehid/dev/scss/main.scss
+++ b/perehid/dev/scss/main.scss
@@ -8,4 +8,7 @@
 @import "partials/bread-crumds";
 @import "partials/content-product";
 @import "partials/content-register";
+@import "partials/sidebar-profile";
+@import "partials/content-profile";
+@import "partials/comments";
 @import "partials/footer";
