Created organization pages.

--- a/perehid/dev/html/partials/scripts.html
+++ b/perehid/dev/html/partials/scripts.html
@@ -15,6 +15,11 @@
         format: "dd/mm/yy",
     });
 
+    $('.input-date-wrap').datepicker({
+        language: "uk",
+        format: "dd/mm/yy",
+    });
+
     $('#header-date .header-date-input').datepicker({
         language: "uk",
         format: "dd/mm/yy",
