--- a/perehid/dev/scss/main.scss
+++ b/perehid/dev/scss/main.scss
@@ -11,4 +11,6 @@
 @import "partials/sidebar-profile";
 @import "partials/content-profile";
 @import "partials/comments";
+@import "partials/sidebar-organization";
+@import "partials/content-organization";
 @import "partials/footer";
