Fixed img and modal.

--- a/perehid/dev/html/partials/sidebar-organization.html
+++ b/perehid/dev/html/partials/sidebar-organization.html
@@ -46,8 +46,8 @@
         </div>
 
         <div class="sidebar-section sidebar-rating">
-            <div class="sidebar-comment clearfix">
-                <div class="sidebar-comment-text" data-toggle="modal" data-target="#modal-private-user">Стати власником</div>
+            <div class="sidebar-comment  clearfix" data-toggle="modal" data-target="#modal-private-user">
+                <div class="sidebar-comment-text">Стати власником</div>
                 <div class="sidebar-comment-icon">
                     <i class="fa fa-user-plus"></i>
                 </div>
