--- a/perehid/dev/scss/main.scss
+++ b/perehid/dev/scss/main.scss
@@ -13,4 +13,5 @@
 @import "partials/comments";
 @import "partials/sidebar-organization";
 @import "partials/content-organization";
+@import "partials/content-offer";
 @import "partials/footer";
