--- a/perehid/dev/scss/libs/select/_select2.scss
+++ b/perehid/dev/scss/libs/select/_select2.scss
@@ -68,7 +68,7 @@
 
 .select2-dropdown {
   background-color: white;
-  border: 1px solid #aaa;
+  border: 1px solid #dee7ed;
   border-radius: 4px;
   box-sizing: border-box;
   display: block;
@@ -91,7 +91,9 @@
 .select2-results__option {
   padding: 6px;
   user-select: none;
-  -webkit-user-select: none
+  -webkit-user-select: none;
+  color: #4b5157;
+  font-size: 1.4rem;
 }
 
 .select2-results__option[aria-selected] {
@@ -339,7 +341,8 @@
 }
 
 .select2-container--default .select2-results__option[aria-disabled=true] {
-  color: #999
+  color: #4b5157;
+  font-size: 1.4rem;
 }
 
 .select2-container--default .select2-results__option[aria-selected=true] {
